objects/zqu__Quote_Template__c.object
<CustomObject>
    <description>Quote template for generate PDF or WORD</description>
    <fields>
        <fullName>Correspondence_Language__c</fullName>
        <label>Correspondence Language</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Quote Templates</relationshipLabel>
        <relationshipName>QuoteTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>Description of this item.</description>
        <inlineHelpText>Description of this item.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate this template is the default one of the refer quote type</description>
        <inlineHelpText>Indicate this template is the default one of the refer quote type</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Quote_Type__c</fullName>
        <description>Quote types.</description>
        <inlineHelpText>Quote Type</inlineHelpText>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                    <default>true</default>
                    <label>New Subscription</label>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Template_Id__c</fullName>
        <description>The template Id in Zuora</description>
        <inlineHelpText>The template Id in Zuora</inlineHelpText>
        <label>Template Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Quote Template</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Country__c</columns>
        <columns>Correspondence_Language__c</columns>
        <columns>zqu__Quote_Type__c</columns>
        <columns>zqu__IsDefault__c</columns>
        <columns>zqu__Template_Id__c</columns>
        <columns>zqu__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>